--- a/pages/book.html
+++ b/pages/book.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!--DATE PICKER-->
@@ -16,6 +16,9 @@
     <script src="../scripts/submit_Ticket.js" type="module"></script>
     <script src="../scripts/manageButton.js" type="module"></script>
     <script src="../scripts/userCheck.js" type="module"></script>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 </head>
 
@@ -41,7 +44,7 @@
                 <a href="./booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
                     Schedules</a>
                 <a href="./rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
-                <a href="/pages/login.html"
+                <a id="navbar-login-button" href="/pages/login.html"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -61,7 +64,7 @@
                 <a href="../index.html" class="block py-2">Home</a>
                 <a href="./booking.html" class="block py-2">Routes & Schedules</a>
                 <a href="./rates.html" class="block py-2">Rates</a>
-                <a href="/pages/login.html" class="block py-2">Login</a>
+                <a id="navbar-login-button" href="/pages/login.html" class="block py-2">Login</a>
             </div>
         </nav>
 
