--- a/pages/rates.html
+++ b/pages/rates.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>Montecillo Roro | Rates</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
     <script src="../scripts/main.js" type="module"></script>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
 </head>
 
 <body class="h-full scroll-smooth">
@@ -32,7 +37,7 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
-                <a href="/pages/login.html"
+                <a id="navbar-login-button" href="/pages/login.html"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -52,7 +57,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
-                <a href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
+                <a id="navbar-login-button" href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
 
