--- a/pages/admin.html
+++ b/pages/admin.html
@@ -8,11 +8,15 @@
 
     <title>Montecillo Roro | Booking</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src="../scripts/main.js" type="module"></script>
     <!-- <script src="../scripts/getUser.js" type="module"></script> -->
     <script src="../scripts/loginHandler.js" type="module"></script>
     <script src="../scripts/checkUserToDashboard.js" type="module"></script>
     <script src="../scripts/admin/revokeAll.js" type="module"></script>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
@@ -39,7 +43,7 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
-                <a href="/pages/login.html"
+                <a id="navbar-login-button" href="/pages/login.html"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -59,7 +63,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
-                <a href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
+                <a id="navbar-login-button" href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
 
