--- a/pages/login.html
+++ b/pages/login.html
@@ -7,12 +7,11 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Montecillo Roro | Login</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src="../scripts/checkUserToDashboard.js" type="module"></script>
     <script src="../scripts/submit_login.js" type="module"></script>
     <script src="../scripts/main.js" type="module"></script>
     <script src="../scripts/loginHandler.js" type="module"></script>
-    <script src="../"></script>
 </head>
 
 <body class="h-full scroll-smooth">
@@ -37,7 +36,7 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
-                <a href="/pages/login.html"
+                <a id="navbar-login-button" href="/pages/login.html"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -57,7 +56,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
-                <a href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
+                <a id="navbar-login-button" href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
         <div class="relative w-full h-20">
