--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                     Schedules</a>
                 <a href="/pages/rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
                 <a id="navbar-login-button" href="/pages/login.html"
-                    class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition"><i class="fa fa-user" aria-hidden="true" style="margin-right: 10px"></i>Login</a>
+                    class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition"><i
+                        class="fa fa-user" aria-hidden="true" style="margin-right: 10px"></i>Login</a>
 
             </div>
 
@@ -118,7 +119,8 @@
                                 <ul class="py-2 text-sm text-gray-700">
                                     <li><a href="#" class="seat-option block px-4 py-2 hover:bg-gray-100">Economy</a>
                                     </li>
-                                    <li><a href="#" class="seat-option block px-4 py-2 hover:bg-gray-100">First Class</a></li>
+                                    <li><a href="#" class="seat-option block px-4 py-2 hover:bg-gray-100">First
+                                            Class</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -129,24 +131,47 @@
                         <div class="relative">
                             <label class="block text-gray-700 mb-1">Departure</label>
                             <input readonly id="dropdownDepartureButton" data-dropdown-toggle="Departuredropdown"
-                                class="text-gray-800 w-full p-2 border border-gray-300 rounded-md cursor-pointer focus:ring-2 focus:ring-blue-500 focus:outline-none"
+                                class="focus:outline-none caret-transparent text-gray-800 w-full p-2 border border-gray-300 rounded-md cursor-pointer focus:ring-2 focus:ring-blue-500 focus:outline-none"
                                 placeholder="Batangas" type="text" />
                             <div id="Departuredropdown"
                                 class="z-10 hidden bg-white divide-y divide-gray-100 rounded-md shadow-md w-44">
                                 <ul class="py-2 text-sm text-gray-700">
-                                    <li><a href="#"
-                                            class="departure-option block px-4 py-2 hover:bg-gray-100">Batangas</a></li>
-                                    <li><a href="#"
-                                            class="departure-option block px-4 py-2 hover:bg-gray-100">Calapan</a></li>
-                                    <li><a href="#"
-                                            class="departure-option block px-4 py-2 hover:bg-gray-100">Bulalacao</a>
+                                    <li>
+                                        <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Batangas</div>
+                                            <div class="text-xs text-gray-500">Batangas Port</div>
+                                        </a>
                                     </li>
-                                    <li><a href="#"
-                                            class="departure-option block px-4 py-2 hover:bg-gray-100">Caticlan</a></li>
-                                    <li><a href="#"
-                                            class="departure-option block px-4 py-2 hover:bg-gray-100">Damangas</a></li>
-                                    <li><a href="#"
-                                            class="departure-option block px-4 py-2 hover:bg-gray-100">Banago</a></li>
+                                    <li>
+                                        <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="text-xs text-gray-500">Calapan Port</div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="text-xs text-gray-500">Bulalacao Port</div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Aklan</div>
+                                            <div class="text-xs text-gray-500">Caticlan Jetty Port</div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Iloilo</div>
+                                            <div class="text-xs text-gray-500">Dumangas Port</div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Negros Occidental</div>
+                                            <div class="text-xs text-gray-500">Banago Port (Bacolod)</div>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -155,28 +180,47 @@
                         <div class="relative">
                             <label class="block text-gray-700 mb-1">Destination</label>
                             <input readonly id="dropdownDestinationButton" data-dropdown-toggle="Destinationdropdown"
-                                class="text-gray-800 w-full p-2 border border-gray-300 rounded-md cursor-pointer focus:ring-2 focus:ring-blue-500 focus:outline-none"
+                                class="focus:outline-none caret-transparent text-gray-800 w-full p-2 border border-gray-300 rounded-md cursor-pointer focus:ring-2 focus:ring-blue-500 focus:outline-none"
                                 placeholder="Caticlan" type="text" />
                             <div id="Destinationdropdown"
                                 class="z-10 hidden bg-white divide-y divide-gray-100 rounded-md shadow-md w-44">
                                 <ul class="py-2 text-sm text-gray-700">
-                                    <li><a href="#"
-                                            class="destination-option block px-4 py-2 hover:bg-gray-100">Batangas</a>
+                                    <li>
+                                        <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Batangas</div>
+                                            <div class="text-xs text-gray-500">Batangas Port</div>
+                                        </a>
                                     </li>
-                                    <li><a href="#"
-                                            class="destination-option block px-4 py-2 hover:bg-gray-100">Calapan</a>
+                                    <li>
+                                        <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="text-xs text-gray-500">Calapan Port</div>
+                                        </a>
                                     </li>
-                                    <li><a href="#"
-                                            class="destination-option block px-4 py-2 hover:bg-gray-100">Bulalacao</a>
+                                    <li>
+                                        <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="text-xs text-gray-500">Bulalacao Port</div>
+                                        </a>
                                     </li>
-                                    <li><a href="#"
-                                            class="destination-option block px-4 py-2 hover:bg-gray-100">Caticlan</a>
+                                    <li>
+                                        <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Aklan</div>
+                                            <div class="text-xs text-gray-500">Caticlan Jetty Port</div>
+                                        </a>
                                     </li>
-                                    <li><a href="#"
-                                            class="destination-option block px-4 py-2 hover:bg-gray-100">Damangas</a>
+                                    <li>
+                                        <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Iloilo</div>
+                                            <div class="text-xs text-gray-500">Dumangas Port</div>
+                                        </a>
                                     </li>
-                                    <li><a href="#"
-                                            class="destination-option block px-4 py-2 hover:bg-gray-100">Banago</a></li>
+                                    <li>
+                                        <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
+                                            <div class="font-medium">Negros Occidental</div>
+                                            <div class="text-xs text-gray-500">Banago Port (Bacolod)</div>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
