--- a/pages/login.html
+++ b/pages/login.html
@@ -83,9 +83,8 @@
                         <input
                             class="w-full rounded border border-gray-300 py-2 px-4 pr-10 focus:ring-2 focus:ring-blue-400 focus:outline-none"
                             id="PasswordField" type="password" placeholder="Password" required />
-                        <button type="button" id="togglePassVisibility"
-                            class="absolute inset-y-0 right-3 flex items-center text-gray-600 hover:text-black"
-                            onclick="togglePassVisibility()">
+                        <button type="button"
+                            class="toggle-pass absolute inset-y-0 right-3 flex items-center text-gray-600 hover:text-black">
                             <i class="fa fa-eye"></i>
                         </button>
                     </div>
