--- a/pages/register.html
+++ b/pages/register.html
@@ -14,20 +14,6 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <script>
-        function togglePassVisibility() {
-            let passwordField = document.getElementById("PasswordField");
-            let eyeIcon = document.getElementById("togglePassVisibility").querySelector("i");
-            if (passwordField.type === "password") {
-                passwordField.type = "text";
-                eyeIcon.classList.replace("fa-eye", "fa-eye-slash");
-            } else {
-                passwordField.type = "password";
-                eyeIcon.classList.replace("fa-eye-slash", "fa-eye");
-            }
-        }
-    </script>
 </head>
 
 <body class="h-full scroll-smooth">
@@ -113,9 +99,17 @@
                         <input
                             class="w-full rounded border border-gray-300 py-2 px-4 pr-10 focus:ring-2 focus:ring-blue-400 focus:outline-none"
                             id="PasswordField" type="password" placeholder="Password" />
-                        <button type="button" id="togglePassVisibility"
-                            class="absolute inset-y-0 right-3 flex items-center text-gray-500 hover:text-black"
-                            onclick="togglePassVisibility()">
+                        <button type="button"
+                            class="toggle-pass absolute inset-y-0 right-3 flex items-center text-gray-500 hover:text-black">
+                            <i class="fa fa-eye"></i>
+                        </button>
+                    </div>
+                    <div class="relative">
+                        <input
+                            class="w-full rounded border border-gray-300 py-2 px-4 pr-10 focus:ring-2 focus:ring-blue-400 focus:outline-none"
+                            id="RepeatPasswordField" type="password" placeholder="Repeat Password" />
+                        <button type="button"
+                            class="toggle-pass absolute inset-y-0 right-3 flex items-center text-gray-500 hover:text-black">
                             <i class="fa fa-eye"></i>
                         </button>
                     </div>
