--- a/pages/user.html
+++ b/pages/user.html
@@ -12,6 +12,7 @@
     <script src="../scripts/getUser.js" type="module"></script>
     <script src="../scripts/loginHandler.js" type="module"></script>
     <script src="../scripts/checkUserToDashboard.js" type="module"></script>
+    <script src="../scripts/downloadTicket.js" type="module"></script>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
