--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     </li>
                                     <li>
                                         <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
-                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="font-medium">Calapan Mindoro</div>
                                             <div class="text-xs text-gray-500">Calapan Port</div>
                                         </a>
                                     </li>
@@ -193,7 +193,7 @@
                                     </li>
                                     <li>
                                         <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
-                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="font-medium">Calapan Mindoro</div>
                                             <div class="text-xs text-gray-500">Calapan Port</div>
                                         </a>
                                     </li>
