--- a/pages/book.html
+++ b/pages/book.html
@@ -125,7 +125,7 @@
                                     </li>
                                     <li>
                                         <a href="#" class="departure-option block px-4 py-2 hover:bg-gray-100">
-                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="font-medium">Calapan</div>
                                             <div class="text-xs text-gray-500">Calapan Port</div>
                                         </a>
                                     </li>
@@ -174,7 +174,7 @@
                                     </li>
                                     <li>
                                         <a href="#" class="destination-option block px-4 py-2 hover:bg-gray-100">
-                                            <div class="font-medium">Oriental Mindoro</div>
+                                            <div class="font-medium">Calapan</div>
                                             <div class="text-xs text-gray-500">Calapan Port</div>
                                         </a>
                                     </li>
