Font size change

--- a/pages/book.html
+++ b/pages/book.html
@@ -98,9 +98,9 @@
                         <div id="Seatdropdown"
                             class="z-10 hidden bg-white divide-y divide-gray-100 rounded-md shadow-md w-44">
                             <ul class="py-2 text-sm text-gray-700">
-                                <li><a href="#" class="seat-option block px-4 py-2 hover:bg-gray-100">Economy</a>
+                                <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">Economy</a>
                                 </li>
-                                <li><a href="#" class="seat-option block px-4 py-2 hover:bg-gray-100">First Class</a>
+                                <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">First Class</a>
                                 </li>
                             </ul>
                         </div>
