--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
                                 <ul class="py-2 text-sm text-gray-700">
                                     <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">Economy</a>
                                     </li>
-                                    <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">First
-                                            Class</a></li>
+                                    <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">First Class</a></li>
                                 </ul>
                             </div>
                         </div>
