Fixes/Assets change

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="/pages/booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
                     Schedules</a>
                 <a href="/pages/rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html"
+                <a id="navbar-login-button" href="#"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition"><i
                         class="fa fa-user" aria-hidden="true" style="margin-right: 10px"></i>Login</a>
 
@@ -73,7 +73,7 @@
                 <a href="index.html" class="block py-2">Home</a>
                 <a href="/pages/booking.html" class="block py-2">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html" class="block py-2">Login</a>
+                <a id="navbar-login-button" href="#" class="block py-2">Login</a>
 
             </div>
         </nav>
@@ -117,9 +117,9 @@
                             <div id="Seatdropdown"
                                 class="z-10 hidden bg-white divide-y divide-gray-100 rounded-md shadow-md w-44">
                                 <ul class="py-2 text-sm text-gray-700">
-                                    <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">Economy</a>
-                                    </li>
-                                    <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">First Class</a></li>
+                                    <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">Economy</a></li>
+                                    <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">Premium Economy</a></li>
+                                    <li><a href="#" class="seat-option font-medium block px-4 py-2 hover:bg-gray-100">Business Class</a></li>
                                 </ul>
                             </div>
                         </div>
