--- a/pages/booking.html
+++ b/pages/booking.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="h-full scroll-smooth">
+<body class="h-full scroll-smooth" style="user-select: none;">
     <div id="loader"
         class="z-100 fixed inset-0 bg-white flex items-center justify-center z-100 transition-opacity duration-500">
         <div class="w-12 h-12 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
@@ -37,7 +37,7 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html"
+                <a id="navbar-login-button" href="#"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -57,7 +57,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
+                <a id="navbar-login-button" href="#" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
 
@@ -81,13 +81,13 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/book.html"
+                    <a id="info-to-book" href="#"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-stone-100 rounded-lg transition inline-block">
                         Book Now
                     </a>
                 </div>
             </div>
-            <img src="../assets/BAT-CAL.png" class="rounded-lg drop-shadow-lg" />
+            <img src="../assets/routes_assets/BAT-CAL.jpg" class="rounded-lg drop-shadow-lg w-1/2" />
         </section>
 
         <section
@@ -100,13 +100,13 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/book.html"
+                    <a id="info-to-book" href="#"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-stone-100 rounded-lg transition inline-block">
                         Book Now
                     </a>
                 </div>
             </div>
-            <img src="../assets/BUL-CAT.png" class="rounded-lg drop-shadow-lg" />
+            <img src="../assets/routes_assets/BUL-CAT.jpg" class="rounded-lg drop-shadow-lg w-1/2" />
         </section>
 
         <section
@@ -119,13 +119,13 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/book.html"
+                    <a id="info-to-book" href="#"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base text-stone-100 rounded-lg transition inline-block">
                         Book Now
                     </a>
                 </div>
             </div>
-            <img src="../assets/DUM-BAN.png" class="rounded-lg drop-shadow-lg" />
+            <img src="../assets/routes_assets/DUM-BAN.jpg" class="rounded-lg drop-shadow-lg w-1/2" />
         </section>
 
 
