--- a/pages/rates.html
+++ b/pages/rates.html
@@ -37,7 +37,7 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html"
+                <a id="navbar-login-button" href="#"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -57,7 +57,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
+                <a id="navbar-login-button" href="#" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
 
@@ -81,7 +81,7 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/login.html"
+                    <a id="info-to-book" href="#"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book
                         Now</a>
                 </div>
@@ -99,7 +99,7 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/login.html"
+                    <a id="info-to-book" href="#"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book
                         Now</a>
                 </div>
@@ -117,7 +117,7 @@
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
                 <div>
-                    <a href="../pages/login.html"
+                    <a id="info-to-book" href="#"
                         class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book
                         Now</a>
                 </div>
