--- a/pages/user.html
+++ b/pages/user.html
@@ -23,6 +23,18 @@
         }
     </script>
 
+    <style>
+        body {
+            user-select: none;
+        }
+
+        img {
+            pointer-events: none;
+            user-drag: none;
+            -webkit-user-drag: none;
+        }
+    </style>
+
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 
@@ -48,7 +60,7 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html"
+                <a id="navbar-login-button" href="#"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -68,7 +80,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
+                <a id="navbar-login-button" href="#" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
 
@@ -99,9 +111,9 @@
                         <h2 class="text-xl font-semibold text-gray-800 mb-2">User ID Card</h2>
 
                         <div class="flex flex-row pt-5">
-                            <div id="placeholder-pfp"
-                                class="w-24 h-24 bg-gray-300 rounded-full flex items-center justify-center text-gray-600 text-2xl font-bold">
-                                ID
+                            <div id="placeholder-pfp">
+                                <img id="pfp-image" src="https://ui-avatars.com/api/"
+                                    class="w-24 h-24 rounded-full flex items-center justify-center"></img>
                             </div>
 
                             <div class="ml-5">
