--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="/pages/rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
                 <a id="navbar-login-button" href="#"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition"><i
-                        class="fa fa-user" aria-hidden="true" style="margin-right: 10px"></i>Login</a>
+                       hidden class="fa fa-user" aria-hidden="true" style="margin-right: 10px"></i>Login</a>
 
             </div>
 
