--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/assets/roro_transparent.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
@@ -15,7 +16,6 @@
     <link rel="icon" type="image/png" href="./assets/roro_transparent.png">
     <script src="./scripts/main.js" type="module"></script>
     <script src="./scripts/submit_Ticket.js" type="module"></script>
-    <script src="./scripts/manageButton.js" type="module"></script>
     <script src="./scripts/userCheck.js" type="module"></script>
 
     <script>
