--- a/pages/admin.html
+++ b/pages/admin.html
@@ -77,14 +77,86 @@
 
         <!-- MAIN CONTENTS HERE PLS -->
 
-        <div class="bg-white p-6 rounded-2xl shadow-xl mt-8 max-w-2xl w-full">
-            <h2 class="text-xl font-bold text-gray-800 mb-4">Admin Panel</h2>
-            <button onclick="revokeAllSessions()"
-                class="w-full bg-red-600 text-white font-semibold py-3 rounded-lg hover:bg-red-700 transition">
-                Force Sign Out All Users
-            </button>
-            <p id="adminStatus" class="text-sm text-gray-600 mt-3"></p>
+        <div class="bg-white p-6 pb-30 rounded-2xl shadow-xl mt-10 max-w-5xl w-full mx-auto">
+            <h2 class="text-2xl font-bold text-gray-800 mb-6">Admin Dashboard</h2>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+                <!-- Force Sign Out Card -->
+                <div class="p-5 border rounded-xl shadow hover:shadow-md transition">
+                    <h3 class="text-lg font-semibold text-gray-700 mb-3">User Sessions</h3>
+                    <p class="text-sm text-gray-600 mb-4">Sign out all currently logged-in users in the system.</p>
+                    <button onclick="revokeAllSessions()"
+                        class="w-full bg-red-600 text-white font-semibold py-2 rounded-lg hover:bg-red-700 transition">
+                        Force Sign Out All Users
+                    </button>
+                    <p id="adminStatus" class="text-sm text-gray-500 mt-2"></p>
+                </div>
+
+                <!-- User Management (Future Expansion) -->
+                <div class="p-5 border rounded-xl shadow hover:shadow-md transition">
+                    <h3 class="text-lg font-semibold text-gray-700 mb-3">User Management</h3>
+                    <p class="text-sm text-gray-600 mb-4">View, block, or delete user accounts. (Coming soon)</p>
+                    <button disabled
+                        class="w-full bg-gray-300 text-gray-600 font-semibold py-2 rounded-lg cursor-not-allowed">
+                        Manage Users
+                    </button>
+                </div>
+
+                <!-- Logs and Reports (Future) -->
+                <div class="p-5 border rounded-xl shadow hover:shadow-md transition">
+                    <h3 class="text-lg font-semibold text-gray-700 mb-3">System Logs</h3>
+                    <p class="text-sm text-gray-600 mb-4">View recent activities, logins, and errors. (Coming soon)</p>
+                    <button disabled
+                        class="w-full bg-gray-300 text-gray-600 font-semibold py-2 rounded-lg cursor-not-allowed">
+                        View Logs
+                    </button>
+                </div>
+
+                <!-- Analytics (Future) -->
+                <div class="p-5 border rounded-xl shadow hover:shadow-md transition">
+                    <h3 class="text-lg font-semibold text-gray-700 mb-3">Analytics</h3>
+                    <p class="text-sm text-gray-600 mb-4">See booking trends and usage metrics. (Coming soon)</p>
+                    <button disabled
+                        class="w-full bg-gray-300 text-gray-600 font-semibold py-2 rounded-lg cursor-not-allowed">
+                        View Analytics
+                    </button>
+                </div>
+
+            </div>
+
+
+
         </div>
+
+        <!-- ADMIN TODO NOTEBOOK -->
+        <div class="bg-white p-6 pb-30 rounded-2xl shadow-xl mt-10 max-w-4xl w-full mx-auto">
+            <h2 class="text-3xl font-bold text-gray-800 mb-6 flex items-center gap-2">Admin TODO Notebook</h2>
+
+            <!-- Add Note Form -->
+            <form id="todo-form" class="flex items-center gap-4 mb-6">
+                <input type="text" id="todo-input" placeholder="Add a new task..."
+                    class="flex-grow border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    required />
+                <button type="submit" class="bg-blue-600 text-white px-5 py-2 rounded-lg hover:bg-blue-700 transition">
+                    Add
+                </button>
+            </form>
+
+            <!-- TODO List -->
+            <ul id="todo-list" class="space-y-3">
+                <!-- Example item -->
+                <!--
+    <li class="flex justify-between items-center bg-gray-50 border px-4 py-3 rounded-lg shadow-sm">
+      <span class="text-gray-800">Sample task here</span>
+      <button class="text-red-600 hover:text-red-800" onclick="removeTodo(this)">
+        <i class="fa-solid fa-trash"></i>
+      </button>
+    </li>
+    -->
+            </ul>
+        </div>
+
 
         <footer class="w-full bg-gray-900 py-10 text-center text-white">
             &copy; 2025 Montecillo Roro. All Rights Reserved. | Javaitech
