--- a/pages/booking.html
+++ b/pages/booking.html
@@ -76,7 +76,7 @@
             <div class="flex flex-col text-left justify-center">
                 <h2 class="text-2xl sm:text-3xl font-bold text-black">BATANGAS - CALAPAN</h2>
                 <p>
-                    TRAVEL TIME: 2 Hours <br>
+                    TRAVEL TIME: 5 Hours <br>
                     Address: Barangay Santa Clara, Batangas City <br>
                     Mobile Nos.: 09XXXXXXXXX
                 </p>
@@ -87,7 +87,7 @@
                     </a>
                 </div>
             </div>
-            <img src="../assets/routes_assets/BAT-CAL.jpg" class="rounded-lg drop-shadow-lg w-1/2" />
+            <img src="../assets/routes_assets/BAT-CAL.png" class="rounded-lg drop-shadow-lg w-1/2" />
         </section>
 
         <section
@@ -106,7 +106,7 @@
                     </a>
                 </div>
             </div>
-            <img src="../assets/routes_assets/BUL-CAT.jpg" class="rounded-lg drop-shadow-lg w-1/2" />
+            <img src="../assets/routes_assets/BUL-CAT.png" class="rounded-lg drop-shadow-lg w-1/2" />
         </section>
 
         <section
@@ -125,7 +125,7 @@
                     </a>
                 </div>
             </div>
-            <img src="../assets/routes_assets/DUM-BAN.jpg" class="rounded-lg drop-shadow-lg w-1/2" />
+            <img src="../assets/routes_assets/DUM-BAN.png" class="rounded-lg drop-shadow-lg w-1/2" />
         </section>
 
 
