--- a/pages/rates.html
+++ b/pages/rates.html
@@ -86,7 +86,7 @@
                         Now</a>
                 </div>
             </div>
-            <img src="../assets/BAT-CAL_RATE.png" class="rounded-lg drop-shadow-lg" />
+            <img src="../assets/routes_assets/BAT-CAL-PRICE.png" class="w-1/2 rounded-lg drop-shadow-lg" />
         </section>
 
         <section
@@ -104,7 +104,7 @@
                         Now</a>
                 </div>
             </div>
-            <img src="../assets/BULA_CAT_RATE.png" class="rounded-lg drop-shadow-lg" />
+            <img src="../assets/routes_assets/BUL-CAT-PRICE.png" class="w-1/2 rounded-lg drop-shadow-lg" />
         </section>
 
         <section
@@ -122,7 +122,7 @@
                         Now</a>
                 </div>
             </div>
-            <img src="../assets/DUM-BAN_RATE.png" class="rounded-lg drop-shadow-lg" />
+            <img src="../assets/routes_assets/DUM-BAN-PRICE.png" class="w-1/2 rounded-lg drop-shadow-lg" />
         </section>
 
 
