--- a/index.html
+++ b/index.html
@@ -94,10 +94,8 @@
 
                 <div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-2xl">
                     <div class="flex space-x-6 border-b pb-4 mb-6">
-                        <button id="book" class="text-gray-600 font-medium hover:text-blue-600 transition">Book a
-                            flight</button>
-                        <button id="manage" class="text-gray-600 font-medium hover:text-blue-600 transition">Manage
-                            booking</button>
+                        <button id="book" class="text-gray-600 font-medium hover:text-blue-600 transition">Book a flight</button>
+                        <button id="manage" class="text-gray-600 font-medium hover:text-blue-600 transition">Manage booking</button>
                     </div>
 
                     <div class="mb-6 flex flex-wrap items-center gap-6 justify-center">
@@ -180,7 +178,7 @@
                             <label class="block text-gray-700 mb-1">Destination</label>
                             <input readonly id="dropdownDestinationButton" data-dropdown-toggle="Destinationdropdown"
                                 class="focus:outline-none caret-transparent text-gray-800 w-full p-2 border border-gray-300 rounded-md cursor-pointer focus:ring-2 focus:ring-blue-500 focus:outline-none"
-                                placeholder="Caticlan" type="text" />
+                                placeholder="Calapan" type="text" />
                             <div id="Destinationdropdown"
                                 class="z-10 hidden bg-white divide-y divide-gray-100 rounded-md shadow-md w-44">
                                 <ul class="py-2 text-sm text-gray-700">
