--- a/pages/admin.html
+++ b/pages/admin.html
@@ -9,19 +9,15 @@
     <title>Montecillo Roro | Booking</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script src="../scripts/main.js" type="module"></script>
-    <!-- <script src="../scripts/getUser.js" type="module"></script> -->
-    <script src="../scripts/loginHandler.js" type="module"></script>
-    <script src="../scripts/checkUserToDashboard.js" type="module"></script>
     <script src="../scripts/admin/revokeAll.js" type="module"></script>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 
-<body class="h-full scroll-smooth" onload="loginCheck()">
+<body class="h-full scroll-smooth">
     <div id="loader"
         class="z-100 fixed inset-0 bg-white flex items-center justify-center z-100 transition-opacity duration-500">
         <div class="w-12 h-12 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
@@ -71,7 +67,6 @@
             <div class="bg-blue-700 absolute inset-0"></div>
             <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
                 <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Dashboard</p>
-                <!-- <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a> -->
             </div>
         </div>
 
@@ -118,15 +113,11 @@
                     <h3 class="text-lg font-semibold text-gray-700 mb-3">Analytics</h3>
                     <p class="text-sm text-gray-600 mb-4">See booking trends and usage metrics. (Coming soon)</p>
                     <button disabled
-                        class="w-full bg-gray-300 text-gray-600 font-semibold py-2 rounded-lg cursor-not-allowed">
-                        View Analytics
+                        class="w-full bg-gray-300 text-gray-600 font-semibold py-2 rounded-lg cursor-not-allowed">View Analytics
                     </button>
                 </div>
 
             </div>
-
-
-
         </div>
 
         <!-- ADMIN TODO NOTEBOOK -->
