--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="/pages/booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
                     Schedules</a>
                 <a href="/pages/rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
-                <a id="navbar-login-button" href="#"
+                <a id="navbar-login-button" href="/pages/login.html"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition"><i
                        hidden class="fa fa-user" aria-hidden="true" style="margin-right: 10px"></i>Login</a>
 
@@ -73,7 +73,7 @@
                 <a href="index.html" class="block py-2">Home</a>
                 <a href="/pages/booking.html" class="block py-2">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2">Rates</a>
-                <a id="navbar-login-button" href="#" class="block py-2">Login</a>
+                <a id="navbar-login-button" href="/pages/login.html" class="block py-2">Login</a>
 
             </div>
         </nav>
