--- a/pages/book.html
+++ b/pages/book.html
@@ -46,7 +46,7 @@
                 <a href="./booking.html" class="nav-link text-white hover:text-neutral-300 transition">Routes &
                     Schedules</a>
                 <a href="./rates.html" class="nav-link text-white hover:text-neutral-300 transition">Rates</a>
-                <a id="navbar-login-button" href="#"
+                <a id="navbar-login-button" href="/pages/login.html"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -66,7 +66,7 @@
                 <a href="../index.html" class="block py-2">Home</a>
                 <a href="./booking.html" class="block py-2">Routes & Schedules</a>
                 <a href="./rates.html" class="block py-2">Rates</a>
-                <a id="navbar-login-button" href="#" class="block py-2">Login</a>
+                <a id="navbar-login-button" href="/pages/login.html" class="block py-2">Login</a>
             </div>
         </nav>
 
