--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
                     class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="#"
+                <a id="navbar-login-button" href="/pages/login.html"
                     class="bg-blue-600 px-5 rounded-lg nav-link text-white hover:text-neutral-300 transition">Login</a>
 
             </div>
@@ -55,7 +55,7 @@
                 <a href="../index.html" class="block py-2 text-stone-100">Home</a>
                 <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
-                <a id="navbar-login-button" href="#" class="block py-2 text-stone-100">Login</a>
+                <a id="navbar-login-button" href="/pages/login.html" class="block py-2 text-stone-100">Login</a>
             </div>
         </nav>
         <div class="relative w-full h-20">
